--- a/package.json
+++ b/package.json
@@ -15,17 +15,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.21",
-    "@types/react": "^18.0.30",
-    "@types/react-dom": "^18.0.11",
     "clsx": "^1.2.1",
     "fast-xml-parser": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "save": "^2.9.0",
+    "tsconfig-paths": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -58,22 +55,33 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
-    "@babel/plugin-syntax-jsx": "^7.16.5",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.21",
+    "@types/react": "^18.0.30",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.14",
+    "css-loader": "^6.7.3",
     "esbuild-runner": "^2.2.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.5.1",
+    "prettier": "2.8.8",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5"
   }
 }
