--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "target": "ESNEXT" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
+    "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
     "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "lib": [
       "es2015",
       "es2017.object",
       "es7",
-      "dom"
+      "dom",
+      "esnext"
     ] /* Specify library files to be included in the compilation. */,
     "allowJs": true /* Allow javascript files to be compiled. */,
     // "checkJs": true,                       /* Report errors in .js files. */
-    "jsx": "preserve" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
+    "jsx": "react" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationDir": "./dist",
     "sourceMap": true /* Generates corresponding '.map' file. */,
@@ -42,9 +43,7 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
     "paths": {
-      "~/*": [
-        "*"
-      ]
+      "~/*": ["*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
@@ -65,22 +64,14 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true
   },
-  "exclude": [
-    "node_modules",
-    "coverage",
-    "cypress.config.ts"
-  ],
+  "exclude": ["node_modules", "coverage"],
   "include": [
-    ".storybook/**/*.ts",
-    ".storybook/**/*.tsx",
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "bin/loadTexts.ts",
     "ext-types/*.d.ts",
-    "next.config.js",
     "jest.setup.ts",
-    "src/index.js",
+    "src/index.tsx",
     "public/static/locales/index.ts"
   ]
 }
