chore/gh-pages: fix code to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://aleksandra-shevchenko.github.io/chernikov-design/",
   "name": "chernikov",
   "author": {
     "name": "Aleksandra Shevchenko",
