chore: fix name of app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://aleksandra-shevchenko.github.io/chernikov-design/",
-  "name": "chernikov",
+  "homepage": "http://aleksandra-shevchenko.github.io/chernikov-design",
+  "name": "chernikov-design",
   "author": {
     "name": "Aleksandra Shevchenko",
     "email": "dorosh.ag@gmail.com"
